# agent-efficiency-bench

./: .gitignore  README.md  plan-state.md  pyproject.toml  v0-tasks.md
configs/: sources-dev.yaml  sources-release.yaml  sources-smoke.yaml  sources.yaml
data/tasks/: README.md  public_efficiency_smoke.jsonl  public_efficiency_subset.jsonl
docs/: design.md  openrouter.md  running-benchmarks.md
docs/calibration/: assistantbench-current-calibration.md  assistantbench-gpt-5.4-nano-calibration.md  assistantbench-web-search-calibration.md  task-audit.md
docs/plans/: 2026-06-29-openrouter-execution-harness.md
examples/: sample_runs.jsonl
src/agent_efficiency_bench/: __init__.py  api.py  budget.py  cli.py  io.py  metrics.py  reporting.py  runner.py  schemas.py  scoring.py  sources.py  task_audit.py  tracing.py
src/agent_efficiency_bench/agents/: __init__.py  base.py  openrouter_answer.py  openrouter_tool_loop.py
tests/: test_answer_agent.py  test_api.py  test_assistantbench_harness.py  test_budget.py  test_cli.py  test_cli_helpers.py  test_evaluators.py  test_execution_schemas.py  test_integration_fake_provider.py  test_llm_judge_evaluator.py  test_metrics.py  test_normalizers.py  test_openrouter_client.py  test_reporting.py  test_runner.py  test_schemas.py  test_source_configs.py  test_structured_evaluator.py  test_swe_bench_harness.py  test_task_audit.py  test_tau2_bench_harness.py  test_tau2_source.py  test_terminal_bench_harness.py  test_tool_loop_agent.py  test_tracing.py
tmp/repro-citation/: manifest.json  run_results.jsonl  run_telemetry.jsonl
(+16 files in other folders)
